# sys-prog

./: .gitignore  README.md
Andrew S. Tanenbaum, Herbert Bos. Modern operating systems, 4th edition/Chapter 2. Processes and threads/: Ex19.c
arm-64-bit-assembly-language/introduction/: 1.1  1.10  1.11  1.12  1.13  1.2  1.3  1.4  1.5  1.6  1.7  1.8  1.9
arm/raspberry-pi/: info.txt
computer-organization/chapter-1-intoduction/: answers.docx
computer-organization/chapter-2-computer-system-organization/: answers.docx
os-internals/allocator/: CMakeLists.txt
os-internals/paging/: CMakeLists.txt  main.cpp
os-internals/planning/: CMakeLists.txt  main.cpp
os-internals/round_robin/: CMakeLists.txt
os-internals/slab/: CMakeLists.txt
os-internals/wait-die/: CMakeLists.txt
pthreads/laboratory_work_#1/: CMakeLists.txt  main.c
pthreads/laboratory_work_#10/: main.c
pthreads/laboratory_work_#16/: CMakeLists.txt
pthreads/laboratory_work_#17/: CMakeLists.txt
pthreads/laboratory_work_#2/: CMakeLists.txt  main.c
pthreads/laboratory_work_#29/: CMakeLists.txt
pthreads/laboratory_work_#29/lib/picohttpparser/: picohttpparser.c  picohttpparser.h
pthreads/laboratory_work_#29/src/: main.cpp
pthreads/laboratory_work_#29/src/client/: Client.cpp  Client.h  Server.cpp  Server.h
pthreads/laboratory_work_#29/src/data/: Data.cpp  Data.h
pthreads/laboratory_work_#29/src/server/: Client.h  Server.cpp  Server.h
pthreads/laboratory_work_#29/src/utility/: PicoHttpParser.cpp  PicoHttpParser.h  PicoHttpRequest.cpp  PicoHttpRequest.h  PicoHttpResponse.cpp  PicoHttpResponse.h  network_utility.cpp  network_utility.h
pthreads/laboratory_work_#3/: CMakeLists.txt  main.c
pthreads/laboratory_work_#30/: CMakeLists.txt
pthreads/laboratory_work_#30/lib/picohttpparser/: README.md
pthreads/laboratory_work_#30/src/: main.cpp
pthreads/laboratory_work_#30/src/client/: Client.cpp  Client.h
pthreads/laboratory_work_#30/src/data/: Data.cpp  Data.h
pthreads/laboratory_work_#30/src/server/: Server.cpp  Server.h
pthreads/laboratory_work_#4/: CMakeLists.txt  main.c
pthreads/laboratory_work_#5/: CMakeLists.txt  main.c
pthreads/laboratory_work_#6/: CMakeLists.txt  main.c
pthreads/laboratory_work_#7/: main.c  (+1 more)
(+125 files in other folders)
